get form in controller

--- a/modules/custom/hello_world/hello_world.routing.yml
+++ b/modules/custom/hello_world/hello_world.routing.yml
@@ -11,7 +11,7 @@ hello_world.hellopage:
   requirements:
     # Мы будем показывать страницу только тем, у кого есть права на просмотр
     # содержимого.
-    _permission: 'view content'
+    _permission: 'access content'
 
 
 
